Bug 1534160 - Part 2: Cherry-pick patch for Android time zone detection. r=jwalden

Cherry-pick the commit from <https://github.com/unicode-org/icu/pull/605>.

Depends on D82545

Differential Revision: https://phabricator.services.mozilla.com/D82546